# advent_of_code

./: .gitignore  .pylintrc  README.md  poetry_utils.py  pyproject.toml
.github/workflows/: lint_format.yml
2020/day_01/: day_01_solution.py
2020/day_02/: day_02_solution.py
2020/day_03/: day_03_solution.py
2020/day_04/: day_04_solution.py
2020/day_05/: day_05_solution.py
2020/day_06/: day_06_solution.py
2020/day_07/: day_07_solution.py
2020/day_08/: day_08_solution.py
2020/day_09/: day_09_solution.py
2020/day_10/: day_10_solution.py
2020/day_11/: day_11_solution.py
2020/day_12/: day_12_solution.py
2020/day_13/: day_13_solution.py
2020/day_14/: day_14_solution.py
2020/day_15/: day_15_solution.py
2020/day_xx/: README.md  day_xx_solution.py
2020/day_xx_template/: README.md  day_xx_solution.py
2022/day_01/: day_01_solution.py
2022/day_02/: day_02_solution.py
2022/day_03/: day_03_solution.py
2022/day_04/: day_04_solution.py
2022/day_06/: day_06_solution.py
2022/day_xx_template/: day_xx_solution.py
