[tool.poetry]
name = "2020"
version = "0.1.0"
description = "Advent of Code 2020 Solutions"
authors = ["Jordy Williams <jordy_williams@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
typing = "^3.7.4"
sympy = "^1.7.1"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
isort = "^5.6.4"
pylint = "^2.15.7"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--pylint ./2020/ ./ --pylint-jobs=4"

[tool.pylint.message_control]
disable="line-too-long,duplicate-code"

[tool.poetry.scripts]
lint = "poetry_utils:run_lint"
format = "poetry_utils:run_format"
check_isort = "poetry_utils:check_isort"
check_format = "poetry_utils:check_format"
2020 = "poetry_utils:run_all_days(year=2020)"
2022 = "poetry_utils:run_all_days(year=2022)"
all_solutions = "poetry_utils:run_all_days"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
